[package]
name = "galloc"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]

[features]
std = []
default = ["std"]

[dependencies]
tracing = { version = "0.1", optional = true, default-features = false }
bitflags = { version = "1.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
