[package]
name = "gpu-alloc-ash"
version = "0.5.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "`ash` backend for `gpu-alloc`"
documentation = "https://docs.rs/gpu-alloc-ash"
readme = "../README.md"
homepage = "https://github.com/zakarumych/gpu-alloc"
repository = "https://github.com/zakarumych/gpu-alloc"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "vulkan", "allocation", "no-std"]
categories = ["graphics", "memory-management", "no-std", "game-development"]

[dependencies]
gpu-alloc-types = { path = "../types", version = "0.2" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
ash = { version = "0.37", default-features = false }
tinyvec = { version = "1.0",  default-features = false, features = ["alloc"] }
