[package]
name = "gpu-alloc-erupt"
version = "0.3.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "`erupt` backend for `gfx-alloc`"
keywords = ["gpu", "vulkan", "allocation", "no-std"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gpu-alloc-erupt/0.2.0"
homepage = "https://github.com/zakarumych/gpu-alloc"
repository = "https://github.com/zakarumych/gpu-alloc"

[dependencies]
gpu-alloc-types = { path = "../types", version = "0.2" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
erupt = { version = "0.17", default-features = false, features = ["loading"] }
tinyvec = { version = "1.0",  default-features = false, features = ["alloc"] }
