[package]
name = "gpu-alloc-erupt"
version = "0.6.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "`erupt` backend for `gpu-alloc`"
documentation = "https://docs.rs/gpu-alloc-erupt"
readme = "../README.md"
homepage = "https://github.com/zakarumych/gpu-alloc"
repository = "https://github.com/zakarumych/gpu-alloc"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "vulkan", "allocation", "no-std"]
categories = ["graphics", "memory-management", "no-std", "game-development"]

[dependencies]
gpu-alloc-types = { path = "../types", version = "0.2" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
erupt = { version = "0.21", default-features = false, features = ["loading"] }
tinyvec = { version = "1.0", default-features = false, features = ["alloc"] }
