[package]
name = "gpu-alloc-basic-example"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
publish = false

[features]
mock = ["gpu-alloc-mock"]
gfx = ["gpu-alloc-gfx"]

[dependencies]
gpu-alloc = { path = "../gpu-alloc", version = "=0.5.0", features = ["tracing"] }
eyre = "0.6"
color-eyre = "0.5"
gpu-alloc-mock = { path = "../mock", version = "=0.2", optional = true }
gpu-alloc-gfx = { path = "../gfx", version = "=0.3", optional = true }
gfx-hal = { version = "0.8", optional = true }
gfx-backend-vulkan = { version = "0.8", optional = true }
gpu-alloc-erupt = { path = "../erupt", version = "=0.4", optional = true }
erupt = { version = "0.18", optional = true, features = ["loading"] }
gpu-alloc-ash = { path = "../ash", version = "=0.1", optional = true }
ash = { version = "0.32", default-features = false, features = ["libloading"], optional = true }

tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }
tracing-error = { version = "0.1" }
tracing = { version = "0.1" }

[[bin]]
name = "mock"
path = "src/mock.rs"
required-features = ["mock"]

[[bin]]
name = "gfx"
path = "src/gfx.rs"
required-features = ["gfx", "gfx-hal", "gfx-backend-vulkan"]

[[bin]]
name = "erupt"
path = "src/erupt.rs"
required-features = ["gpu-alloc-erupt", "erupt"]

[[bin]]
name = "ash"
path = "src/ash.rs"
required-features = ["gpu-alloc-ash", "ash"]

[[bin]]
name = "transient-reuse"
path = "src/transient_reuse.rs"
required-features = ["mock"]
