[package]
name = "galloc-gfx"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"

[dependencies]
galloc-types = { path = "../types", version = "0.1" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
gfx-hal = { version = "0.6", default-features = false }
