[package]
name = "gpu-alloc-gfx"
version = "0.3.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "`gfx-hal` backend for `gfx-alloc`"
documentation = "https://docs.rs/gpu-alloc-gfx"
readme = "../README.md"
homepage = "https://github.com/zakarumych/gpu-alloc"
repository = "https://github.com/zakarumych/gpu-alloc"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "vulkan", "allocation", "gfx"]
categories = ["graphics", "memory-management", "game-development"]

[dependencies]
gpu-alloc-types = { path = "../types", version = "0.2" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
gfx-hal = { version = "0.7", default-features = false }
