[package]
name = "gpu-alloc"
version = "0.5.4"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "Implementation agnostic memory allocator for Vulkan like APIs"
documentation = "https://docs.rs/gpu-alloc-types"
readme = "../README.md"
homepage = "https://github.com/zakarumych/gpu-alloc"
repository = "https://github.com/zakarumych/gpu-alloc"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "vulkan", "allocation", "no-std"]
categories = ["graphics", "memory-management", "no-std", "game-development"]

[features]
std = []
default = ["std"]

[dependencies]
gpu-alloc-types = { path = "../types", version = "0.2" }
tracing = { version = "0.1.27", optional = true, features = ["attributes"], default-features = false }
bitflags = { version = "1.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
