[package]
name = "gpu-alloc-types"
version = "0.3.1"
authors = ["Zakarum <roman@barykin.me>"]
edition = "2018"
description = "Core types of gpu-alloc crate"
documentation = "https://docs.rs/gpu-alloc-types"
readme = "../README.md"
homepage = "https://github.com/zakarumych/gpu-alloc"
repository = "https://github.com/zakarumych/gpu-alloc"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "vulkan", "allocation", "no-std"]
categories = ["graphics", "memory-management", "no-std", "game-development"]

[dependencies]
bitflags = { version = "2.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
